--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.9"
 dependencies = [
     "fastapi[standard]>=0.115.8",
     "psycopg2-binary>=2.9.10",
+    "redis>=5.2.1",
 ]
